replace depricated Long contructor with the valueOf-Method