@@ -748,7 +748,7 @@ public class SteamWebApiClientTest extends BaseTest {
 
 	@Test
 	public void testProcessGetMatchHistoryBySequenceNum() throws SteamApiException, IOException {
-		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(new Long(100), 20);
+		GetMatchHistoryBySequenceNumRequest request = SteamWebApiRequestFactory.createGetMatchHistoryBySequenceNumRequest(Long.valueOf(100), 20);
 
 		String mockAnswer = readResourceAsString("dota2/GetMatchHistoryBySequenceNum.json");
 
